# nsight-training

./: .gitattributes  LICENSE.md  README.md
cuda/2020_gtc/: README.md
cuda/2020_gtc/code/: Makefile  findgllib.mk  imgserver.cu  test.cpp
cuda/2020_gtc/projects/: cproject.template  generate_nsightee_projects.py  launch_x86_64.launch  nsight_compute_x86_64.nsight-cuproj  project.template
cuda/2020_ncu_smem/: LICENSE.txt  t5_1.cu  t5_2.cu  t5_3.cu  t5_4.cu  t5_5.cu
cuda/2021_gtc/x-ac-03-v1/: LICENSE.md  README.md
cuda/2021_gtc/x-ac-03-v1/task1/: .env  Dockerfile  Dockerfile.nsight  NsightSystems.desktop  docker-compose.deployment.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  nginx.conf
cuda/2021_gtc/x-ac-03-v1/task1/fs/dli/service/vnc/: startup.sh
cuda/2021_gtc/x-ac-03-v1/task1/fs/etc/xdg/xfce4/kiosk/: kioskrc
cuda/2021_gtc/x-ac-03-v1/task1/fs/opt/noVNC/: index.html
cuda/2021_gtc/x-ac-03-v1/task1/fs/usr/share/applications/: xfce4-session-logout.desktop
cuda/2021_gtc/x-ac-03-v1/task1/jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
cuda/2021_gtc/x-ac-03-v1/task1/task/: lab.ipynb
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/: 01_introduction.ipynb  02_apsm.ipynb  03_nsight_systems.ipynb  04_nsight_compute.ipynb  05_spb.ipynb  06_shmem.ipynb  07_balanced.ipynb  08_summary.ipynb  apsm.ncu-proj
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/: LICENSE.txt
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/: CMakeLists.txt  README.md
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/cli/: CMakeLists.txt
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/cli/common/: binary_load.cpp  binary_load.hpp  util.cpp  util.hpp
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/cli/tool/: apsm_tool.cpp  apsm_tool_parallel.cpp  apsm_tool_parallel.hpp
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/cmake/modules/: FindThrust.cmake  LICENSE.txt  readme.md
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/data/: readme.md
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/data/offline/rx/time/: readme.md
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/data/offline/tx/: readme.md
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/docs/: CMakeLists.txt  Doxyfile.in  apsm_detection.dox  apsm_train.dox  mainpage.dox
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/lib/: CMakeLists.txt
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/lib/apsm/: apsm_detect.cu  apsm_detect.cuh  apsm_harddecoder.cu  apsm_harddecoder.cuh  apsm_kernel.cu  apsm_kernel.cuh  apsm_matrix.cu  apsm_matrix.cuh  apsm_parameters.cu  apsm_parameters.cuh  apsm_train.cu  apsm_train.cuh  apsm_types.cuh  apsm_versions.h  apsm_wrapper.cu  apsm_wrapper.cuh  cuda_device.cu  cuda_device.cuh  cuda_errorhandling.cuh  cuda_eventtimer.cuh  cuda_indexing.cu  cuda_indexing.cuh  cuda_types.cuh
cuda/2021_gtc/x-ac-03-v1/task1/task/ncu/apsm/cpp/lib/binary/: binary_file.hpp  converter.py
cuda/2021_gtc/x-ac-03-v1/task1/task/nsys/: 01_introduction.ipynb  02_pytorch_mnist.ipynb  03_optimization_workflow.ipynb  04_cpu_bottleneck.ipynb  05_cuda_memcpy_async.ipynb  06_tensor_core_util.ipynb  07_summary.ipynb
cuda/2021_gtc/x-ac-03-v1/task1/task/nsys/application/: LICENSE.txt  main_baseline.py  main_baseline_nvtx.py  main_opt1.py  main_opt2.py  main_opt3.py
cuda/2021_gtc/x-ac-03-v1/task1/task/nsys/application/data/MNIST/: LICENSE.txt
cuda/2021_gtc/x-ac-03-v1/task1/task/nsys/precollected_reports/: baseline.nsys-rep  baseline.qdrep  baseline_nvtx.nsys-rep  baseline_nvtx.qdrep  firstOptimization.nsys-rep  firstOptimization.qdrep  secondOptimization.nsys-rep  secondOptimization.qdrep  thirdOptimization.nsys-rep  thirdOptimization.qdrep
cuda/2021_gtc/x-ac-04-v1/: .env  README.md
cuda/2021_gtc/x-ac-04-v1/task1/: .dockerignore  .env  .launchignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
cuda/2021_gtc/x-ac-04-v1/task1/correctness/: Dockerfile
cuda/2021_gtc/x-ac-04-v1/task1/correctness/fs/etc/firefox/: syspref.js
cuda/2021_gtc/x-ac-04-v1/task1/correctness/fs/home/nvidia/: .bashrc
cuda/2021_gtc/x-ac-04-v1/task1/correctness/fs/opt/noVNC/: style.css
cuda/2021_gtc/x-ac-04-v1/task1/correctness/fs/usr/share/applications/: eclipse.desktop
cuda/2021_gtc/x-ac-04-v1/task1/jupyter/: bashrc
cuda/2021_gtc/x-ac-04-v1/task1/jupyter/.jupyter/lab/workspaces/: lab-a511.jupyterlab-workspace
cuda/2021_gtc/x-ac-04-v1/task1/jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace  lab-a511.jupyterlab-workspace
cuda/2021_gtc/x-ac-04-v1/task1/nginx/: Dockerfile  nginx.conf
cuda/2021_gtc/x-ac-04-v1/task1/task/: lab.ipynb
cuda/2021_gtc/x-ac-04-v1/task1/task/debugger/: 01_introduction.ipynb  02_eclipse.ipynb  03_cuda-gdb.ipynb  04_key_takeaways.ipynb
cuda/2021_gtc/x-ac-04-v1/task1/task/sanitizer/: 01_introduction.ipynb  02_convolution.ipynb  03_memcheck1.ipynb  04_memcheck2.ipynb  05_racecheck.ipynb  06_initcheck.ipynb  07_memory_leaks.ipynb  08_unused_memory.ipynb  09_conclusion.ipynb
cuda/2021_gtc/x-ac-04-v1/task1/task/sanitizer/code/: LICENSE.txt  convolution.cu
cuda/nsight_compute/python_report_interface/: Aggregate_instruction_statistics.ipynb  Breakdown_metrics.ipynb  Kernel_name_based_filtering.ipynb  MetricAttributes.ipynb  Metric_attributes.ipynb  NVTX_support.ipynb  Opcode_instanced_metrics.ipynb  README.md  Source_correlated_metrics.ipynb
cuda/nsight_compute/sample_reports/: manual_nvtx.ncu-rep  sample_report.ncu-rep  sample_report_2.ncu-rep
cuda/nsight_compute/vlog_memory_workload/: .gitignore  CMakeLists.txt  LICENSE  README.md
cuda/nsight_compute/vlog_memory_workload/src/: cuda_helper.cuh  main.cu
grfx/2021_gtc/x-gd-01-v1/: .gitlab-ci.yml  README.md
grfx/2021_gtc/x-gd-01-v1/task1/: .env  .gitignore  .launchignore
grfx/2021_gtc/x-gd-01-v1/task1/lab/task/: conclusion.ipynb  start.ipynb
grfx/2021_gtc/x-gd-01-v1/task1/lab/task/graphics/: 01_introduction.ipynb  02_gpu_fundamentals.ipynb  03_ray_tracing_basics.ipynb  04_common_problems.ipynb  mcq.py
grfx/2021_gtc/x-gd-01-v1/task1/lab/task/systems/: nsight-systems-deepdive.ipynb
(+28 files in other folders)
